udocker (1.1.1-RC1)
  * Updated documentation with OpenMPI information and examples
  * More complete unit test coverage
  * Redirect messages to stderr
  * Improved parsing of quotes in the command line
  * Allow overring of the HOME environment variable
  * Allow override of libfakechroot.so at the container level
  * Automatic selection of libfakechroot.so from container info
  * Improve automatic install
  * Enable reseting prefix paths in Fn modes in remote hosts
  * Do not set AF_UNIX_PATH in Fn modes when the host /tmp is a volume

udocker (1.1.0)

  * Support image names prefixed by registry similarly to docker 
  * Add execution engine selection logic
  * Add fr execution engine based on shared library interception
  * Add rc execution engine based on rootless namespaces
  * Improve proot tmp files cleanup on non ext filesystems
  * Improve search returning empty on Docker repositories
  * Improve runC execution portability 
  * Add environment variable UDOCKER_KEYSTORE
    - closes: #75
  * Prevent creation of .udocker when UDOCKER_KEYSTORE is used
    - closes: #75

udocker (1.0.4)

  * Documentation fixes

udocker (1.0.3)

  * Support for import Docker containers in newer metadata structure
  * Improve the command line parsing
  * Improve temporary file handling and removal
  * Support for additional execution engines to be provided in the future
  * Improved parsing of entrypoint and cmd metadata
    - closes: #53
  * Increase name alias length
    - closes: #52
  * Add support for change dir into volume directories
    - closes: #51
  * Fix deletion of files upon container import
    - closes: #50
  * Fix exporting of host environment variables to the containers
    - closes: #48
  * Change misleading behavior of import tarball from move to copy
    - closes: #44
  * Fix validation of volumes specification
    - closes: #43

udocker (1.0.2)

  * Improve download on repositories that fail authentication on /v2